<resources>
    <string name="app_name">FirebaseExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Hasło</string>
    <string name="sign_up_google">Zarejestruj się z Google</string>
    <string name="sign_in_google">Zaloguj się z Google</string>
    <string name="loading">Loading</string>
    <string name="register_success">Zarejestrowano poprawnie jako %1$s</string>
    <string name="login_success">Zalogowano poprawnie jako %1$s</string>
    <string name="register_error">Błąd podczas rejestracji</string>
    <string name="login_error">Błąd podczas logowania</string>
    <string name="email_wrong_format">Podaj poprawny e-mail</string>
    <string name="password_error">Hasło nie może być puste</string>
    <string name="home_title">Home</string>
    <string name="account_title">Konto</string>
    <string name="email_label">E-mail</string>
    <string name="name_label">Nazwa</string>
    <string name="phone_label">Telefon</string>
    <string name="uid_label">UID</string>
    <string name="providers">Providers</string>
    <string name="sign_out_error">Problem z wylogowaniem - %1$s</string>
    <string name="sign_out_success">Wylogowano</string>
    <string name="sign_up_chbx">Rejestracja</string>
    <string name="realtime">Realtime Database</string>

</resources>